--- a/assets/css/main - Copy.css
+++ b/assets/css/main - Copy.css
@@ -185,11 +185,11 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #ffd000 /*#2ebaae*/ !important;
+			color: #2ebaae !important;
 		}
 
 			a:hover:before {
-				color: #ffd000 /*#2ebaae*/ !important;
+				color: #2ebaae !important;
 			}
 
 	strong, b {
@@ -1894,8 +1894,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 1px #ffd000 /*#2ebaae*/;
-			color: #ffd000 /*#2ebaae*/ !important;
+			box-shadow: inset 0 0 0 1px #2ebaae;
+			color: #2ebaae !important;
 		}
 
 			input[type="submit"]:hover:active,
@@ -2073,8 +2073,8 @@ input, select, textarea {
 		input[type="tel"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #ffd000 /*#2ebaae*/;
-			box-shadow: inset 0 0 0 1px #ffd000 /*#2ebaae*/;
+			border-color: #2ebaae;
+			box-shadow: inset 0 0 0 1px #2ebaae;
 		}
 
 	.select-wrapper {
@@ -2215,8 +2215,8 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #ffd000 /*#2ebaae*/;
-			box-shadow: 0 0 0 1px #ffd000 /*#2ebaae*/;
+			border-color: #2ebaae;
+			box-shadow: 0 0 0 1px #2ebaae;
 		}
 
 	input[type="radio"] + label:before {
@@ -2553,9 +2553,7 @@ input, select, textarea {
 				}
 
 /* Posts */
-	.posts{
-		background-color: #000000;
-	}
+
 	ul.posts {
 		list-style: none;
 		padding: 0;
@@ -3422,7 +3420,7 @@ input, select, textarea {
 		margin: 0 0 1em 0;
 		overflow: hidden;
 		position: relative;
-		width: 100%;
+		width: 4em;
 	}
 
 
@@ -3430,7 +3428,7 @@ input, select, textarea {
 		#intro .logo img {
 			display: block;
 			margin-left: -0.25em;
-			width: 100%;
+			width: 4.5em;
 		}
 
 	#intro header h2 {
@@ -3456,51 +3454,7 @@ input, select, textarea {
 			#intro header p {
 				font-size: 0.7em;
 			}
-			
-			#intro{
-				
-				border-bottom: 0;
-				display: inline-block;
-				position: relative;
-				width: 100%;
-				height: 40%;
-			}
-			
-			#intro .logo{
-					
-					overflow: hidden;
-					margin: 0 0 1em 0;
-					padding: 0 0 1em 0;			
-			}
-			
-			
-			#intro .logo img{
-					display: inline-block;
-					justify-content: center;
-					display: centre;
-					position: relative;
-					margin: 0 0 0 0;
-					padding: 0 0 0 0;
-					
-					width: 30em;
-					
-			}
-	}
-	@media screen and (max-width: 980px){
-		#intro{
-				
-				border-bottom: 0;
-				display: inline-block;
-				position: relative;	
-			}
-			
-		#intro .logo {
-		
-		}
 
-		#intro .logo img {
-			width: 25em;
-		}
 	}
 
 	@media screen and (max-width: 736px) {
@@ -3525,14 +3479,8 @@ input, select, textarea {
 			#intro header > :last-child {
 				margin-bottom: 0;
 			}
-			
-			#intro .logo img {
-			width: 20em;
-		}
 
 	}
-	
-	
 
 /* Footer */
 
@@ -3628,7 +3576,7 @@ input, select, textarea {
 					}
 
 					#menu .links > li a:hover h3 {
-						color: #ffd000 /*#2ebaae*/;
+						color: #2ebaae;
 					}
 
 				#menu .links > li:first-child {
